[Android] Added PeerConnection.addTrack implementation
Also fixed remote candidate handling where sdpMid happened to be
undefined

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ xcuserdata
 project.xcworkspace
 .DS_Store
 .idea
+local.properties
+.gradle
+gradle
+gradlew
+gradlew.bat
 android/build
 Podfile.lock
 WebRTC.xcframework
